Add view controller ID

--- a/Project01/Project01/Base.lproj/Main.storyboard
+++ b/Project01/Project01/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
         <!--View Controller-->
         <scene sceneID="WY7-QA-Wp1">
             <objects>
-                <viewController id="Lbt-aD-a5a" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Detail" id="Lbt-aD-a5a" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MNH-Pa-xzK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
