--- a/Project01/Project01/Base.lproj/Main.storyboard
+++ b/Project01/Project01/Base.lproj/Main.storyboard
@@ -53,13 +53,24 @@
                     <view key="view" contentMode="scaleToFill" id="MNH-Pa-xzK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d0w-cp-fYR">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Jfx-Bn-mfn"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="d0w-cp-fYR" firstAttribute="centerY" secondItem="MNH-Pa-xzK" secondAttribute="centerY" id="8Nc-GQ-KU4"/>
+                            <constraint firstItem="d0w-cp-fYR" firstAttribute="leading" secondItem="Jfx-Bn-mfn" secondAttribute="leading" id="BKg-6u-hgQ"/>
+                            <constraint firstItem="d0w-cp-fYR" firstAttribute="centerX" secondItem="MNH-Pa-xzK" secondAttribute="centerX" id="kK7-Z0-F1u"/>
+                            <constraint firstItem="d0w-cp-fYR" firstAttribute="top" secondItem="MNH-Pa-xzK" secondAttribute="topMargin" constant="-44" id="p6W-O1-7hS"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Ip-wr-RaG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1641" y="64"/>
+            <point key="canvasLocation" x="1640.5797101449277" y="63.616071428571423"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mRm-H2-hfP">
