Create action to tap button

--- a/Project02/Project02/Base.lproj/Main.storyboard
+++ b/Project02/Project02/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="uk"/>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MOF-tp-SEz"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oDv-5g-VZa">
                                 <rect key="frame" x="95" y="244" width="200" height="100"/>
