--- a/MilestoneProjects01-03/MilestoneProjects01-03/Base.lproj/Main.storyboard
+++ b/MilestoneProjects01-03/MilestoneProjects01-03/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="apn-Gg-Qzs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GmQ-f8-KnK">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -43,10 +43,29 @@
                             <outlet property="delegate" destination="apn-Gg-Qzs" id="JhV-BM-yus"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="CmR-ZA-OOM"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WZ5-cS-iYw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-40" y="12"/>
+            <point key="canvasLocation" x="889.23076923076917" y="11.374407582938389"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="arB-mt-z0V">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GmQ-f8-KnK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CxZ-jd-X8g">
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="apn-Gg-Qzs" kind="relationship" relationship="rootViewController" id="PHQ-8F-nQO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k5j-4n-Uhy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-40" y="11.374407582938389"/>
         </scene>
     </scenes>
     <resources>
