--- a/MilestoneProjects01-03/MilestoneProjects01-03/Base.lproj/Main.storyboard
+++ b/MilestoneProjects01-03/MilestoneProjects01-03/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -48,6 +49,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WZ5-cS-iYw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="889.23076923076917" y="11.374407582938389"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="GVs-b3-8TJ">
+            <objects>
+                <viewController id="5N2-Dy-wQy" customClass="DetailViewController" customModule="MilestoneProjects01_03" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="x8L-tz-dVv">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Z27-q1-atg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gzF-AM-2Ry" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1765" y="11"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="arB-mt-z0V">
