--- a/MilestoneProjects01-03/MilestoneProjects01-03/Base.lproj/Main.storyboard
+++ b/MilestoneProjects01-03/MilestoneProjects01-03/Base.lproj/Main.storyboard
@@ -57,8 +57,19 @@
                     <view key="view" contentMode="scaleToFill" id="x8L-tz-dVv">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZMK-TH-2tA">
+                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Z27-q1-atg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Z27-q1-atg" firstAttribute="trailing" secondItem="ZMK-TH-2tA" secondAttribute="trailing" id="V1t-KZ-tbe"/>
+                            <constraint firstItem="Z27-q1-atg" firstAttribute="bottom" secondItem="ZMK-TH-2tA" secondAttribute="bottom" id="kOO-4z-2f1"/>
+                            <constraint firstItem="ZMK-TH-2tA" firstAttribute="leading" secondItem="Z27-q1-atg" secondAttribute="leading" id="kz0-Tf-MCg"/>
+                            <constraint firstItem="ZMK-TH-2tA" firstAttribute="top" secondItem="Z27-q1-atg" secondAttribute="top" id="u7F-DJ-VgN"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gzF-AM-2Ry" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
