Change inicial view controller
Now the inicial view controller is the table view controller scene.

--- a/Project04/Project04/Base.lproj/Main.storyboard
+++ b/Project04/Project04/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="itO-NJ-SHj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M23-a7-Qms">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -22,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="966.15384615384608" y="3.5545023696682461"/>
+            <point key="canvasLocation" x="3716.9230769230767" y="-4.2654028436018958"/>
         </scene>
         <!--Website View Controller-->
         <scene sceneID="Kei-Hx-JX5">
@@ -56,28 +56,29 @@
                             <outlet property="delegate" destination="gKE-u7-rLZ" id="qGP-8w-GJN"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="hf5-8t-GbI"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ePh-AR-pBH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1808" y="-4"/>
+            <point key="canvasLocation" x="2736.9230769230767" y="-4.2654028436018958"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="JEu-90-kSL">
+        <scene sceneID="prc-lC-bRx">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="itO-NJ-SHj" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M23-a7-Qms" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Agg-1g-vOx">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dJb-pl-bcq">
                         <rect key="frame" x="0.0" y="47" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="MOr-fn-pGa"/>
+                        <segue destination="gKE-u7-rLZ" kind="relationship" relationship="rootViewController" id="qmY-7e-oef"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TUp-si-Ge7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ag4-qf-7vU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="36.92307692307692" y="3.5545023696682461"/>
+            <point key="canvasLocation" x="1807.6923076923076" y="-4.2654028436018958"/>
         </scene>
     </scenes>
     <resources>
