Add equal height constraints into buttons

--- a/Project06a/Project06a/Base.lproj/Main.storyboard
+++ b/Project06a/Project06a/Base.lproj/Main.storyboard
@@ -58,9 +58,11 @@
                         <constraints>
                             <constraint firstItem="SBH-9j-TMB" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="DAI-kV-Bpj"/>
                             <constraint firstItem="SBH-9j-TMB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9" id="DI0-a1-kXa"/>
+                            <constraint firstItem="cqR-y6-UDE" firstAttribute="height" secondItem="oDv-5g-VZa" secondAttribute="height" id="GxT-JQ-Lbm"/>
                             <constraint firstItem="oDv-5g-VZa" firstAttribute="top" secondItem="SBH-9j-TMB" secondAttribute="bottom" constant="44" id="NeP-Tz-Hm0"/>
                             <constraint firstItem="oDv-5g-VZa" firstAttribute="centerX" secondItem="SBH-9j-TMB" secondAttribute="centerX" id="S2z-Un-8AD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="cqR-y6-UDE" secondAttribute="bottom" constant="20" id="hGQ-ca-dHF"/>
+                            <constraint firstItem="oDv-5g-VZa" firstAttribute="height" secondItem="SBH-9j-TMB" secondAttribute="height" id="n4m-Co-97n"/>
                             <constraint firstItem="cqR-y6-UDE" firstAttribute="top" secondItem="oDv-5g-VZa" secondAttribute="bottom" constant="44" id="vV1-By-jIP"/>
                             <constraint firstItem="cqR-y6-UDE" firstAttribute="centerX" secondItem="oDv-5g-VZa" secondAttribute="centerX" id="xFv-oA-L1U"/>
                         </constraints>
